--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -10,70 +10,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "from dataloaders import get_loaders\n",
     "import torch\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.gridspec as gridspec"
+    "from EDA import plot_metric\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "get_loaders() missing 1 required positional argument: 'eval_phase'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39momegaconf\u001b[39;00m \u001b[39mimport\u001b[39;00m OmegaConf\n\u001b[1;32m      2\u001b[0m configs \u001b[39m=\u001b[39m OmegaConf\u001b[39m.\u001b[39mload(\u001b[39m\"\u001b[39m\u001b[39m./configs/sol3.yaml\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m train_dataset, val_dataset, train_loader, val_loader \u001b[39m=\u001b[39m get_loaders(configs\u001b[39m.\u001b[39;49mdataloader)\n\u001b[1;32m      6\u001b[0m device \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mdevice(\u001b[39m\"\u001b[39m\u001b[39mcuda\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39mcuda\u001b[39m.\u001b[39mis_available() \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: get_loaders() missing 1 required positional argument: 'eval_phase'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from omegaconf import OmegaConf\n",
     "configs = OmegaConf.load(\"./configs/sol3.yaml\")\n",
     "\n",
-    "train_dataset, val_dataset, train_loader, val_loader = get_loaders(configs.dataloader)\n",
+    "train_dataset, val_dataset, train_loader, val_loader = get_loaders(configs,eval_phase = False)\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_loader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m plot_images(\n\u001b[0;32m----> 2\u001b[0m     dataloader \u001b[39m=\u001b[39m train_loader,\n\u001b[1;32m      3\u001b[0m     dataloader_title \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mTrain dataloader\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      4\u001b[0m     title \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mNO\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      5\u001b[0m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_loader' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "plot_images(\n",
-    "    dataloader = train_loader,\n",
-    "    dataloader_title = \"Train dataloader\",\n",
-    "    title = \"NO\",\n",
-    ")"
    ]
   },
   {
@@ -86,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -101,8 +70,6 @@
     }
    ],
    "source": [
-    "from EDA import plot_metric\n",
-    "\n",
     "args_plot = {\"figsize\":(10,5),\n",
     "               \"linewidth_plot\":3,\n",
     "               \"title_fontsize\":25,\n",
@@ -128,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +110,6 @@
     }
    ],
    "source": [
-    "from EDA import plot_metric\n",
-    "\n",
     "args_plot = {\"figsize\":(10,5),\n",
     "               \"linewidth_plot\":3,\n",
     "               \"title_fontsize\":25,\n",
